feat(server-app-main): upadte comment goswagger and update apis
