# server-app-main/docs/swagger.yaml
@@ -1,70 +1,88 @@
 basePath: /
 definitions:
-  article.ArticleModel:
+  admin.CompanyModel:
     properties:
-      created_at:
+      description:
         type: string
-      filepath:
+      email_admin:
         type: string
-      files:
-        items:
-          $ref: '#/definitions/article.ArticlesFilesDBModel'
-        type: array
-      tags:
+      email_company:
         type: string
-      text:
+      link:
+        type: string
+      logo:
+        type: string
+      phone:
         type: string
       title:
         type: string
-      updated_at:
+    required:
+    - description
+    - email_admin
+    - email_company
+    - link
+    - logo
+    - phone
+    - title
+    type: object
+  admin.UserResponseModel:
+    properties:
+      email:
         type: string
+    required:
+    - email
+    type: object
+  admin.UsersResponseModel:
+    properties:
+      users:
+        items:
+          $ref: '#/definitions/admin.UserResponseModel'
+        type: array
+    required:
+    - users
+    type: object
+  company.CompanyDbModelEx:
+    properties:
+      created_at:
+        type: string
+      data:
+        $ref: '#/definitions/company.CompanyModel'
+      rules:
+        items:
+          type: string
+        type: array
       uuid:
         type: string
     required:
     - created_at
-    - filepath
-    - files
-    - tags
-    - text
+    - data
+    - rules
+    - uuid
+    type: object
+  company.CompanyModel:
+    properties:
+      description:
+        type: string
+      email_admin:
+        type: string
+      email_company:
+        type: string
+      link:
+        type: string
+      logo:
+        type: string
+      phone:
+        type: string
+      title:
+        type: string
+    required:
+    - description
+    - email_admin
+    - email_company
+    - link
+    - logo
+    - phone
     - title
-    - updated_at
-    - uuid
-    type: object
-  article.ArticleSuccessModel:
-    properties:
-      success:
-        type: boolean
-    type: object
-  article.ArticleUuidModel:
-    properties:
-      uuid:
-        type: string
-    required:
-    - uuid
-    type: object
-  article.ArticlesFilesDBModel:
-    properties:
-      filename:
-        type: string
-      filepath:
-        type: string
-      files_id:
-        type: integer
-      index:
-        type: integer
-    required:
-    - filename
-    - filepath
-    - index
-    type: object
-  article.ArticlesModel:
-    properties:
-      articles:
-        items:
-          $ref: '#/definitions/article.ArticleModel'
-        type: array
-    required:
-    - articles
     type: object
   handler.LogoutOutputModel:
     properties:
@@ -79,6 +97,98 @@ definitions:
   handler.successResponse:
     properties:
       message:
+        type: string
+    type: object
+  project.ProjectAnyCountModel:
+    properties:
+      count:
+        type: integer
+      projects:
+        items:
+          $ref: '#/definitions/project.ProjectDbDataEx'
+        type: array
+    required:
+    - count
+    - projects
+    type: object
+  project.ProjectCountModel:
+    properties:
+      count:
+        type: integer
+      limit:
+        type: integer
+      uuid:
+        type: string
+    required:
+    - limit
+    - uuid
+    type: object
+  project.ProjectDataModel:
+    properties:
+      description:
+        type: string
+      logo:
+        type: string
+      managers:
+        items:
+          $ref: '#/definitions/project.UserEmailModel'
+        type: array
+      title:
+        type: string
+    required:
+    - description
+    - managers
+    - title
+    type: object
+  project.ProjectDbDataEx:
+    properties:
+      created_at:
+        type: string
+      data:
+        $ref: '#/definitions/project.ProjectDataModel'
+      uuid:
+        type: string
+    type: object
+  project.ProjectLogoModel:
+    properties:
+      filepath:
+        type: string
+      uuid:
+        type: string
+    required:
+    - filepath
+    - uuid
+    type: object
+  project.ProjectModel:
+    properties:
+      description:
+        type: string
+      logo:
+        type: string
+      managers:
+        items:
+          $ref: '#/definitions/project.UserEmailModel'
+        type: array
+      title:
+        type: string
+      uuid:
+        type: string
+    required:
+    - description
+    - managers
+    - title
+    - uuid
+    type: object
+  project.ProjectUuidModel:
+    properties:
+      uuid:
+        type: string
+    required:
+    - uuid
+    type: object
+  project.UserEmailModel:
+    properties:
+      email:
         type: string
     type: object
   user.GoogleOAuth2Code:
@@ -119,17 +229,15 @@ definitions:
     type: object
   user.UserJSONBModel:
     properties:
-      date_birth:
+      avatar:
         type: string
-      gender:
-        type: boolean
       name:
         type: string
       nickname:
         type: string
       patronymic:
         type: string
-      phone:
+      position:
         type: string
       surname:
         type: string
@@ -150,17 +258,36 @@ definitions:
     type: object
   user.UserProfileDataModel:
     properties:
-      date_birth:
+      avatar:
         type: string
-      gender:
-        type: boolean
+      email:
+        type: string
       name:
         type: string
       nickname:
         type: string
       patronymic:
         type: string
-      phone:
+      position:
+        type: string
+      surname:
+        type: string
+    required:
+    - name
+    - nickname
+    - surname
+    type: object
+  user.UserProfileUpdateDataModel:
+    properties:
+      name:
+        type: string
+      nickname:
+        type: string
+      password:
+        type: string
+      patronymic:
+        type: string
+      position:
         type: string
       surname:
         type: string
@@ -185,15 +312,115 @@ definitions:
 host: localhost:5000
 info:
   contact: {}
-  title: MISU Main Server
+  title: Rental Housing
   version: "1.0"
 paths:
+  /admin/company/create:
+    post:
+      consumes:
+      - application/json
+      description: Создание новой компании (доступно только администратору)
+      operationId: admin-company-create
+      parameters:
+      - description: logo
+        in: query
+        name: logo
+        required: true
+        type: string
+      - description: title
+        in: query
+        name: title
+        required: true
+        type: string
+      - description: description
+        in: query
+        name: description
+        required: true
+        type: string
+      - description: email_company
+        in: query
+        name: email_company
+        required: true
+        type: string
+      - description: email_admin
+        in: query
+        name: email_admin
+        required: true
+        type: string
+      - description: phone
+        in: query
+        name: phone
+        required: true
+        type: string
+      - description: link
+        in: query
+        name: link
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data
+          schema:
+            $ref: '#/definitions/admin.CompanyModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: CreateCompany
+      tags:
+      - admin
+  /admin/user/get/all:
+    post:
+      consumes:
+      - application/json
+      description: Получение списка всех пользователей находящихся в системе
+      operationId: admin-user-get-all
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data
+          schema:
+            $ref: '#/definitions/admin.UsersResponseModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: GetAllUsers
+      tags:
+      - admin
   /auth/activate:
     get:
       consumes:
       - application/json
       description: Активация аккаунта по почте
-      operationId: activate
+      operationId: auth-activate
       produces:
       - application/json
       responses:
@@ -225,7 +452,7 @@ paths:
       consumes:
       - application/json
       description: Выход из аккаунта
-      operationId: logout
+      operationId: auth-logout
       produces:
       - application/json
       responses:
@@ -257,7 +484,7 @@ paths:
       consumes:
       - application/json
       description: Запрос на смену пароля пользователем
-      operationId: recovery-password
+      operationId: auth-recovery-password
       parameters:
       - description: credentials
         in: body
@@ -296,7 +523,7 @@ paths:
       consumes:
       - application/json
       description: Обновление токена доступа и токена обновления
-      operationId: refresh
+      operationId: auth-refresh
       parameters:
       - description: credentials
         in: body
@@ -335,7 +562,7 @@ paths:
       consumes:
       - application/json
       description: Изменение пароля пользователем
-      operationId: reset-password
+      operationId: auth-reset-password
       parameters:
       - description: credentials
         in: body
@@ -374,7 +601,7 @@ paths:
       consumes:
       - application/json
       description: Авторизация пользователя
-      operationId: login
+      operationId: auth-sign-in
       parameters:
       - description: credentials
         in: body
@@ -413,7 +640,7 @@ paths:
       consumes:
       - application/json
       description: Авторизация пользователя через Google OAuth2
-      operationId: login_oauth2
+      operationId: auth-sign-in-oauth2
       parameters:
       - description: credentials
         in: body
@@ -452,7 +679,7 @@ paths:
       consumes:
       - application/json
       description: Авторизация пользователя через VK
-      operationId: login_vk
+      operationId: auth-sign-in-vk
       parameters:
       - description: credentials
         in: body
@@ -490,8 +717,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: Регистрация пользователя
-      operationId: create-account
+      description: Регистрация нового пользователя
+      operationId: auth-sign-up
       parameters:
       - description: account info
         in: body
@@ -525,19 +752,26 @@ paths:
       summary: SignUp
       tags:
       - auth
-  /user/article/create:
+  /auth/sign-up/upload/image:
     post:
       consumes:
       - application/json
-      description: Update article
-      operationId: update-article
+      description: Загрузка пользовательского изображения (аватар)
+      operationId: auth-sign-up-upload-image
+      parameters:
+      - description: account info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/user.UserRegisterModel'
       produces:
       - application/json
       responses:
         "200":
           description: data
           schema:
-            $ref: '#/definitions/article.ArticleSuccessModel'
+            $ref: '#/definitions/user.TokenAccessModel'
         "400":
           description: Bad Request
           schema:
@@ -554,29 +788,72 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/handler.errorResponse'
-      summary: UpdateArticle
+      summary: UploadProfileImage
       tags:
-      - article
-  /user/article/delete:
+      - auth
+  /company/project/add/logo:
     post:
       consumes:
       - application/json
-      description: Удаление статьи
-      operationId: delete-article
+      description: Добавление нового логотипа проекта
+      operationId: company-project-add-logo
+      parameters:
+      - description: logo
+        in: query
+        name: logo
+        required: true
+        type: string
+      - description: uuid
+        in: query
+        name: uuid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data
+          schema:
+            $ref: '#/definitions/project.ProjectLogoModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: AddLogoProject
+      tags:
+      - company
+  /company/project/create:
+    post:
+      consumes:
+      - application/json
+      description: Создание нового проекта в компании
+      operationId: company-project-create
       parameters:
       - description: credentials
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/article.ArticleUuidModel'
+          $ref: '#/definitions/project.ProjectModel'
       produces:
       - application/json
       responses:
         "200":
           description: data
           schema:
-            $ref: '#/definitions/article.ArticleSuccessModel'
+            $ref: '#/definitions/project.ProjectModel'
         "400":
           description: Bad Request
           schema:
@@ -593,29 +870,29 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/handler.errorResponse'
-      summary: DeleteArticle
+      summary: CreateProject
       tags:
-      - article
-  /user/article/get:
+      - company
+  /company/project/get:
     post:
       consumes:
       - application/json
-      description: Get information about article
-      operationId: get-article
+      description: Получение информации о конкретном проекте
+      operationId: company-project-get
       parameters:
       - description: credentials
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/article.ArticleUuidModel'
+          $ref: '#/definitions/project.ProjectUuidModel'
       produces:
       - application/json
       responses:
         "200":
           description: data
           schema:
-            $ref: '#/definitions/article.ArticleModel'
+            $ref: '#/definitions/project.ProjectDbDataEx'
         "400":
           description: Bad Request
           schema:
@@ -632,22 +909,29 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/handler.errorResponse'
-      summary: GetArticle
+      summary: GetProject
       tags:
-      - article
-  /user/article/get/all:
+      - company
+  /company/project/get/all:
     post:
       consumes:
       - application/json
-      description: Получение списка статей
-      operationId: get-articles
+      description: Получение среза из общего числа проектов компании
+      operationId: company-project-get-all
+      parameters:
+      - description: credentials
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/project.ProjectCountModel'
       produces:
       - application/json
       responses:
         "200":
           description: data
           schema:
-            $ref: '#/definitions/article.ArticlesModel'
+            $ref: '#/definitions/project.ProjectAnyCountModel'
         "400":
           description: Bad Request
           schema:
@@ -664,15 +948,54 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/handler.errorResponse'
-      summary: GetArticles
+      summary: GetProjects
       tags:
-      - article
+      - company
+  /user/company/get:
+    post:
+      consumes:
+      - application/json
+      description: Получение информации о компании, к которой принадлежит пользователь
+      operationId: user-company-get
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data
+          schema:
+            $ref: '#/definitions/company.CompanyDbModelEx'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      summary: GetUserCompany
+      tags:
+      - profile
   /user/profile/get:
     post:
       consumes:
       - application/json
-      description: Get user profile
-      operationId: get-profile
+      description: Получение информации о профиле
+      operationId: user-profile-get
+      parameters:
+      - description: credentials
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/user.UserProfileDataModel'
       produces:
       - application/json
       responses:
@@ -703,22 +1026,22 @@ paths:
     post:
       consumes:
       - application/json
-      description: Update user profile
-      operationId: update-profile
+      description: Обновление информации о пользователе
+      operationId: user-profile-update
       parameters:
       - description: credentials
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/user.UserProfileDataModel'
+          $ref: '#/definitions/user.UserProfileUpdateDataModel'
       produces:
       - application/json
       responses:
         "200":
           description: data
           schema:
-            $ref: '#/definitions/user.UserProfileDataModel'
+            $ref: '#/definitions/user.UserJSONBModel'
         "400":
           description: Bad Request
           schema:
